src/rust/names/snapshots/syn_state_machine__rust__names__paths__type_tests__concat_idents! (parse it_matches_fun).snap
---
source: src/rust/names/paths.rs
expression: "crate::parse::<TypePath<P<Infallible>>>(q.clone())"
---
Ok(
    HigherOrderPath {
        leading: false,
        segments: Interlace {
            values: [
                Fn(
                    Id(
                        Ident(
                            Fn,
                        ),
                    ),
                    TypePathFn {
                        args: Paren(
                            Interlace {
                                values: [],
                            },
                            Span,
                        ),
                        returns: None,
                    },
                ),
            ],
        },
    },
)
