src/rust/names/snapshots/syn_state_machine__rust__names__paths__type_tests__concat_idents! (parse it_matches_fun_ret).snap
---
source: src/rust/names/paths.rs
expression: "crate::parse::<TypePath<Paren<P<()>>>>(q.clone())"
---
Ok(
    HigherOrderPath {
        leading: false,
        segments: Interlace {
            values: [
                Fn(
                    Id(
                        Ident(
                            Fn,
                        ),
                    ),
                    TypePathFn {
                        args: Paren(
                            Interlace {
                                values: [],
                            },
                            Span,
                        ),
                        returns: Some(
                            Paren(
                                P(
                                    (),
                                ),
                                Span,
                            ),
                        ),
                    },
                ),
            ],
        },
    },
)
