src/rust/names/snapshots/syn_state_machine__rust__names__paths__type_tests__concat_idents! (parse it_matches_hello).snap
---
source: src/rust/names/paths.rs
expression: "crate::parse::<TypePath<Ident>>(q.clone())"
---
Ok(
    HigherOrderPath {
        leading: false,
        segments: Interlace {
            values: [
                Bare(
                    Id(
                        Ident(
                            hello,
                        ),
                    ),
                ),
            ],
        },
    },
)
