src/rust/names/snapshots/syn_state_machine__rust__names__paths__type_tests__it_matches_bi_path.snap
---
source: src/rust/names/paths.rs
expression: "insta_match_test!(+ parse TypePath<Ident> : hello :: world)"
---
Ok(
    HigherOrderPath {
        leading: false,
        segments: Interlace {
            values: [
                Bare(
                    Id(
                        Ident(
                            hello,
                        ),
                    ),
                ),
                Bare(
                    Id(
                        Ident(
                            world,
                        ),
                    ),
                ),
            ],
        },
    },
)
