src/rust/names/snapshots/syn_state_machine__rust__names__paths__type_tests__it_matches_fun.snap
---
source: src/rust/names/paths.rs
expression: "insta_match_test!(+ parse TypePath<Infallible> : Fn())"
---
Ok(
    HigherOrderPath {
        leading: false,
        segments: Interlace {
            values: [
                Fn(
                    Id(
                        Ident(
                            Fn,
                        ),
                    ),
                    TypePathFn {
                        args: Paren(
                            Interlace {
                                values: [],
                            },
                            Span,
                        ),
                        returns: None,
                    },
                ),
            ],
        },
    },
)
