src/rust/names/snapshots/syn_state_machine__rust__names__paths__type_tests__it_matches_fun_ret.snap
---
source: src/rust/names/paths.rs
expression: "insta_match_test!(+ parse TypePath<Paren<()>> : Fn() -> ())"
---
Ok(
    HigherOrderPath {
        leading: false,
        segments: MinLength(
            Interlace {
                values: [
                    Fn(
                        Id(
                            Identifier(
                                Ident(
                                    Fn,
                                ),
                            ),
                        ),
                        TypePathFn {
                            args: Paren(
                                Interlace {
                                    values: [],
                                },
                                Span,
                            ),
                            returns: Some(
                                Paren(
                                    (),
                                    Span,
                                ),
                            ),
                        },
                    ),
                ],
            },
        ),
    },
)
