src/rust/names/snapshots/syn_state_machine__rust__names__paths__type_tests__it_matches_short_generic.snap
---
source: src/rust/names/paths.rs
expression: "insta_match_test!(+ parse TypePath<Ident> : hello < Hi >)"
---
Ok(
    HigherOrderPath {
        leading: false,
        segments: MinLength(
            Interlace {
                values: [
                    Bare(
                        Id(
                            Identifier(
                                Ident(
                                    hello,
                                ),
                            ),
                        ),
                    ),
                ],
            },
        ),
    },
)
